# rfm-customer-segmentation-marketing

./: README.md  README_copy_iris.md  pyproject.toml
data/preprocessed/: README.md  customers_with_RFM_clustersts.csv  marketing_campaign_preprocessed.csv  target_customers_demographic_uplift.csv  target_customers_rfm_uplift.csv
data/raw/: README.md
experiments/: Performance_Classification.ipynb  RFM_Clustering.ipynb  clustering_model.ipynb  data-prep-visual-eda-and-statistical-hypothesis.ipynb  data_preprocessing_2.ipynb  david_kmeans_clustering.ipynb  david_performance_classification.ipynb  rfm-segmentation-and-clv-modeling.ipynb  sara_clv_model.ipynb
experiments/iris_experiments/: RFM_iris.ipynb  classification_regression_CLV_iris.ipynb  cluster_classifier.pkl  clustering_iris.ipynb  clv_regressor.pkl  customer_segmentation_pipeline.pkl
models/: Clustering_ST.ipynb  Performance_Classification.ipynb  david_clv.ipynb  david_demo_kmeans_clustering.ipynb  kmeans_customer_segments.pkl
models/Cluster_Model/: DEMOGRAPHIC_clustering.ipynb  clustering_anika.ipynb  demographic_uplift_modeling.ipynb  rfm_uplift_modeling.ipynb
models/Exploratory_Data_Analysis/: EDA_RFM_CLV.ipynb  Exploratory_Data_Analysis.ipynb
reports/: Ethical Implications_Biases rpt.ipynb  Team Collaboration rpt.ipynb  python-uplift-env.txt
