[project]
name = "lcr-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
"ipykernel>=6.30.1",
    "joblib>=1.3.0",              # Added for model saving
    "kaleido>=1.1.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",         # Already has KMeans, PCA, preprocessing
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
]